cmake_minimum_required(VERSION 3.20)
project(CSC115)

set(CMAKE_CXX_STANDARD 14)


add_executable(tutorial1-activity1 L1/Tutorial1-activity1.cpp)

add_executable(CtoF L2/CtoF.cpp)

add_executable(discount L2/discount.cpp)

add_executable(FtoC L2/FtoC.cpp)

add_executable(main main.cpp)

add_executable(for-loop L3/for-loop.cpp)

add_executable(do-while L3/do-while.cpp)

add_executable(product L1/product.cpp)

add_executable(rectangular-yard L2/rectangular-yard.cpp)

add_executable(SDPQ L2/SDPQ.cpp)

add_executable(sum L1/sum.cpp)

add_executable(variables L2/variables.cpp)

add_executable(tutorial3-activity2-exercise3 L3/tutorial3-activity2-exercise3.cpp)

add_executable(quiz1 quizzes/quiz1.cpp)

add_executable(quiz2 quizzes/quiz2.cpp)

add_executable(tutorial4-activity2 L4/tutorial4-activity2.cpp)

add_executable(tutorial5-activity1q1 L5/tutorial5-activity1q1.cpp)

add_executable(tutorial5-activity1q2 L5/tutorial5-activity1q2.cpp)

add_executable(tutorial5-activity1q3 L5/tutorial5-activity1q3.cpp)

add_executable(tutorial5-activity1q4 L5/tutorial5-activity1q4.cpp)

add_executable(tutorial7-exercise1-1 L7/tutorial7-exercise1-1.cpp)

add_executable(tutorial7-activity1-2 L7/tutorial7-exercise1-2.cpp)

add_executable(tutorial7-exercise2 L7/tutorial7-exercise2.cpp)

add_executable(tutorial7-exercise3 L7/tutorial7-exercise3.cpp)

add_executable(tutorial7-exercise4 L7/tutorial7-exercise4.cpp)

add_executable(tutorial7-exercise5 L7/tutorial7-exercise5.cpp)

add_executable(tutorial7-exercise6 L7/tutorial7-exercise6.cpp)

add_executable(tutorial8-exercise1 L8/tutorial8-exercise1.cpp)

add_executable(tutorial8-exercise2 L8/tutorial8-exercise2.cpp)

add_executable(tutorial8-exercise3 L8/tutorial8-exercise3.cpp)

add_executable(tutorial8-exercise4 L8/tutorial8-exercise4.cpp)

add_executable(tutorial8-exercise5 L8/tutorial8-exercise5.cpp)

add_executable(tutorial9 L9/tutorial9.cpp)

add_executable(tutorial10 L10/tutorial10.cpp)

add_executable(tutorial11 L11/tutorial11.cpp)

add_executable(tutorial12 L12/tutorial12.cpp)

add_executable(Lab-Final Lab-Final.cpp)

add_executable(random random.cpp)

add_executable(random2 random2.cpp)